[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Background/blue_button_pressed_template.jpg" type="Texture" id=1]
[ext_resource path="res://Resources/Scripts/GameMenuGUI.gd" type="Script" id=2]
[ext_resource path="res://Resources/Background/purple_button_hover_template.jpg" type="Texture" id=3]
[ext_resource path="res://Resources/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Background/blue_button_template.jpg" type="Texture" id=5]
[ext_resource path="res://Resources/Background/acylic_blue_menu_400_600.jpg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="GameMenu" type="Control"]
margin_left = 100.0
margin_top = 75.0
margin_right = 475.0
margin_bottom = 675.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 375.0
margin_bottom = 600.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 351.0
margin_bottom = 565.0
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 311.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Game Menu"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 311.0
margin_bottom = 89.0

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 311.0
margin_bottom = 158.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/PlayButton"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 59.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraftButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 177.0
margin_right = 311.0
margin_bottom = 227.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/DraftButton"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 59.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "DRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoresButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 311.0
margin_bottom = 296.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/ScoresButton"]
margin_left = 90.0
margin_right = 203.0
margin_bottom = 59.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 315.0
margin_right = 311.0
margin_bottom = 365.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/SettingsButton"]
margin_left = 60.0
margin_right = 243.0
margin_bottom = 59.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 384.0
margin_right = 311.0
margin_bottom = 434.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/ExitGameButton"]
margin_left = 100.0
margin_right = 283.0
margin_bottom = 59.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DraftButton" to="." method="_on_DraftButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScoresButton" to="." method="_on_ScoresButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
